v0.3.1
Code compact and styling